View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033540 | Community | OCCT:Data Exchange | public | 2023-11-27 17:14 | 2023-12-18 04:04 |
Reporter | Assigned To | dpasukhi | |||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Target Version | Unscheduled | ||||
Summary | 0033540: Data Exchange - Segmentation fault on loading model | ||||
Description | When loading a step file I get a segmentation fault. I've got the following debugging information. My first assumption is that the member styleContext of StepVisual_ContextDependentOverRidingStyledItem is invalid. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33540 has been created by ichesnokova. SHA-1: 79c2b4fef9bae194fcf1c7a1e8889bcc008c53f6 Detailed log of new commits: Author: ichesnok Date: Mon Nov 27 14:29:00 2023 +0000 Fixed |
|
Branch CR33540 has been updated forcibly by ichesnokova. SHA-1: 6ffcf405ab4e324aadc86c70808e0b3be4f52b79 |
|
Dear dpasukhi, please review branch CR33540. Tests: http://jenkins-test-10.nnov.opencascade.com/view/CR33540-master-ichesnok/view/COMPARE/ |
|
Integrated into CR0-780 |
|
Branch CR33540 has been deleted by mnt. SHA-1: 6ffcf405ab4e324aadc86c70808e0b3be4f52b79 |
occt: master a6e425d0 2023-11-27 14:29:00 ichesnok Committer: dpasukhi Details Diff |
0033540: Data Exchange - Segmentation fault on loading model Implemented workaround to avoid crash on out-of-ISO files |
Affected Issues 0033540 |
|
mod - src/RWStepVisual/RWStepVisual_RWContextDependentOverRidingStyledItem.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-11-27 17:14 |
|
New Issue | |
2023-11-27 17:14 |
|
Assigned To | => ichesnokova |
2023-11-27 17:29 | git | Note Added: 0114672 | |
2023-11-27 17:30 | git | Note Added: 0114673 | |
2023-11-29 18:18 |
|
Assigned To | ichesnokova => dpasukhi |
2023-11-29 18:18 |
|
Status | new => resolved |
2023-11-29 18:18 |
|
Note Added: 0114686 | |
2023-12-12 15:30 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2023-12-12 15:30 | dpasukhi | Status | resolved => reviewed |
2023-12-12 15:30 | dpasukhi | Note Added: 0114720 | |
2023-12-15 17:16 | dpasukhi | Changeset attached | => occt master a6e425d0 |
2023-12-15 17:16 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2023-12-15 17:16 | dpasukhi | Status | reviewed => verified |
2023-12-15 17:16 | dpasukhi | Resolution | open => fixed |
2023-12-18 04:04 | git | Note Added: 0114784 |