0033540: Data Exchange - Segmentation fault on loading model

Implemented workaround to avoid crash on out-of-ISO files